<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:background="@color/home_root_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:visibility="invisible"
        android:id="@+id/ib_home_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/home_ic_back_margin_left"
        android:layout_marginTop="@dimen/home_ic_back_margin_top"
        android:src="@mipmap/ic_home_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/tv_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_select_platform"
        android:textSize="@dimen/home_tv_size_select_platform"
        app:layout_constraintBottom_toBottomOf="@+id/ib_home_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_home_back"/>

    <TextView
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintRight_toRightOf="@+id/home_gl_right"
        app:layout_constraintLeft_toLeftOf="@+id/home_gl_left"
        app:layout_constraintTop_toTopOf="@+id/home_gl_top"
        android:text="@string/home_platform_live"
        android:id="@+id/tv_home_item_1"
        style="@style/style_home_item"/>

    <TextView
        android:layout_marginTop="@dimen/home_item_margin"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_item_1"
        app:layout_constraintRight_toRightOf="@+id/home_gl_right"
        app:layout_constraintLeft_toLeftOf="@+id/home_gl_left"
        android:id="@+id/tv_home_item_2"
        android:text="@string/home_platform_video"
        style="@style/style_home_item"/>

    <TextView
        android:visibility="gone"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_item_2"
        app:layout_constraintRight_toRightOf="@+id/home_gl_right"
        app:layout_constraintLeft_toLeftOf="@+id/home_gl_left"
        android:id="@+id/tv_home_item_3"
        android:text="@string/home_live_anchor_landscape"
        style="@style/style_home_item"/>

    <Button
        android:id="@+id/bt_home_setting_menu_mall"
        android:text="@string/home_setting_item_mall"
        app:layout_constraintLeft_toLeftOf="@+id/iv_home_setting_menu"
        app:layout_constraintBottom_toTopOf="@+id/bt_home_setting_menu_live"
        style="@style/style_home_setting_menu_item"/>

    <Button
        android:id="@+id/bt_home_setting_menu_live"
        android:text="@string/home_setting_item_live"
        app:layout_constraintLeft_toLeftOf="@+id/iv_home_setting_menu"
        app:layout_constraintBottom_toTopOf="@+id/iv_home_setting_menu"
        style="@style/style_home_setting_menu_item"/>

    <ImageView
        android:visibility="gone"
        android:id="@+id/iv_home_setting_menu"
        android:elevation="@dimen/home_item_elevation"
        android:padding="@dimen/home_setting_menu_padding"
        android:src="@mipmap/ic_home_setting_menu"
        android:background="@drawable/shape_home_setting_menu_bg"
        android:layout_marginBottom="@dimen/home_setting_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/home_gl_right"
        app:layout_constraintRight_toRightOf="@+id/home_gl_right"
        android:layout_width="@dimen/home_setting_menu"
        android:layout_height="@dimen/home_setting_menu"/>

    <android.support.constraint.Group
        android:visibility="gone"
        android:id="@+id/home_setting_menu_group"
        app:constraint_referenced_ids="bt_home_setting_menu_mall, bt_home_setting_menu_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.constraint.Guideline
        android:id="@+id/home_gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12"/>

    <android.support.constraint.Guideline
        android:id="@+id/home_gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88"/>

    <android.support.constraint.Guideline
        android:id="@+id/home_gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11"/>
</android.support.constraint.ConstraintLayout>
